--- a/LagerHantering/LagerHantering.csproj
+++ b/LagerHantering/LagerHantering.csproj
@@ -193,6 +193,7 @@
   <ItemGroup>
     <Content Include="AngularApp\app.module.js" />
     <Content Include="AngularApp\appRouting.js" />
+    <Content Include="AngularApp\Controllers\deliveryInController.js" />
     <Content Include="AngularApp\Controllers\homeController.js" />
     <Content Include="AngularApp\Controllers\indexController.js" />
     <Content Include="AngularApp\Controllers\componentController.js" />
@@ -201,6 +202,7 @@
     <Content Include="AngularApp\Services\componentService.js" />
     <Content Include="AngularApp\Services\loginService.js" />
     <Content Include="AngularApp\Services\registerService.js" />
+    <Content Include="AngularApp\Views\deliveryIn.html" />
     <Content Include="AngularApp\Views\home.html" />
     <Content Include="AngularApp\Views\component.html" />
     <Content Include="AngularApp\Views\register.html" />
