--- a/LagerHantering/LagerHantering.csproj
+++ b/LagerHantering/LagerHantering.csproj
@@ -194,6 +194,7 @@
     <Content Include="AngularApp\app.module.js" />
     <Content Include="AngularApp\appRouting.js" />
     <Content Include="AngularApp\Controllers\deliveryInController.js" />
+    <Content Include="AngularApp\Controllers\editComponentController.js" />
     <Content Include="AngularApp\Controllers\homeController.js" />
     <Content Include="AngularApp\Controllers\indexController.js" />
     <Content Include="AngularApp\Controllers\componentController.js" />
@@ -203,6 +204,7 @@
     <Content Include="AngularApp\Services\loginService.js" />
     <Content Include="AngularApp\Services\registerService.js" />
     <Content Include="AngularApp\Views\deliveryIn.html" />
+    <Content Include="AngularApp\Views\editComponent.html" />
     <Content Include="AngularApp\Views\home.html" />
     <Content Include="AngularApp\Views\component.html" />
     <Content Include="AngularApp\Views\register.html" />
