Front End sluttampen lite bug fix.

--- a/LagerHantering/packages.config
+++ b/LagerHantering/packages.config
@@ -40,4 +40,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Twitter.Bootstrap.Bootswatch.Slate" version="3.2.0.0" targetFramework="net46" />
 </packages>
